--- a/shengping.html
+++ b/shengping.html
@@ -30,10 +30,10 @@ a:active {
       <td width="231" bgcolor="#16163B" style="color: #FFFFFF; font-size: 24px;"><p>人物介绍-</p>
       <p><strong style="font-size: 30px"> 柳宗元</strong></p></td>
       <td width="79" align="center" bgcolor="#5F5FC1" style="color: #FFFFFF; font-size: 23px;">生平</td>
-      <td width="80" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="成就.html">成就</a></td>
-      <td width="82" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="作品.html">作品</a></td>
-      <td width="79" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="评价.html">评价</a></td>
-      <td width="265" align="center" bgcolor="#16163B" style="color: #FFFFFF"><p><a href="华文多元评量 柳宗元.html"><img src="image/6872685c68ce0Ugd.gif" width="76" height="74" alt=""/></a></p>
+      <td width="80" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="mywebsite/chengjiu.html">成就</a></td>
+      <td width="82" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="mywebsite/zuoping.html">作品</a></td>
+      <td width="79" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="mywebsite/pingjia.html">评价</a></td>
+      <td width="265" align="center" bgcolor="#16163B" style="color: #FFFFFF"><p><a href="mywebsite/index.html"><img src="image/6872685c68ce0Ugd.gif" width="76" height="74" alt=""/></a></p>
       <p>乘坐秦始皇回到主页</p></td>
       <td width="33" bgcolor="#16163B" style="color: #FFFFFF">&nbsp;</td>
     </tr>
@@ -113,3 +113,4 @@ a:active {
 </table>
 </body>
 </html>
+
