--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@ a:active {
       <td width="25" bgcolor="#16163B" style="color: #FFFFFF">&nbsp;</td>
       <td width="219" bgcolor="#16163B" style="color: #FFFFFF; font-size: 24px;"><p>人物介绍-</p>
       <p><strong style="font-size: 30px"> 柳宗元</strong></p></td>
-      <td width="74" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="mywebsite/shengping.html">生平</a></td>
-      <td width="68" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="mywebsite/chengjiu.html">成就</a></td>
-      <td width="70" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="mywebsite/zuoping.html">作品</a></td>
-      <td width="83" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="mywebsite/pingjia.html">评价</a></td>
-      <td width="221" align="center" bgcolor="#16163B" style="color: #FFFFFF"><p><a href="mywebsite/index.html"></a><img src="image/6872685c68ce0Ugd.gif" width="99" height="99" alt=""/></p>
+      <td width="74" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="shengping.html">生平</a></td>
+      <td width="68" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="chengjiu.html">成就</a></td>
+      <td width="70" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="zuoping.html">作品</a></td>
+      <td width="83" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="pingjia.html">评价</a></td>
+      <td width="221" align="center" bgcolor="#16163B" style="color: #FFFFFF"><p><a href="index.html"></a><img src="image/6872685c68ce0Ugd.gif" width="99" height="99" alt=""/></p>
       <p>乘坐秦始皇回到主页</p></td>
       <td width="40" bgcolor="#16163B" style="color: #FFFFFF">&nbsp;</td>
     </tr>
@@ -91,4 +91,5 @@ a:active {
 </table>
 </body>
 </html>
+
 
