--- a/zuoping.html
+++ b/zuoping.html
@@ -29,11 +29,11 @@ a:active {
       <td width="21" bgcolor="#16163B" style="color: #FFFFFF">&nbsp;</td>
       <td width="231" bgcolor="#16163B" style="color: #FFFFFF; font-size: 24px;"><p>人物介绍-</p>
       <p><strong style="font-size: 30px"> 柳宗元</strong></p></td>
-      <td width="79" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="mywebsite/shengping.html">生平</a></td>
-      <td width="93" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="mywebsite/chengjiu.html">成就</a></td>
+      <td width="79" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="shengping.html">生平</a></td>
+      <td width="93" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="chengjiu.html">成就</a></td>
       <td width="80" align="center" bgcolor="#5F5FC1" style="color: #FFFFFF; font-size: 23px;">作品</td>
-      <td width="68" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="mywebsite/pingjia.html">评价</a></td>
-      <td width="265" align="center" bgcolor="#16163B" style="color: #FFFFFF"><p><a href="mywebsite/index.html"><img src="image/6872685c68ce0Ugd.gif" width="76" height="74" alt=""/></a></p>
+      <td width="68" align="center" bgcolor="#16163B" style="color: #FFFFFF; font-size: 23px;"><a href="pingjia.html">评价</a></td>
+      <td width="265" align="center" bgcolor="#16163B" style="color: #FFFFFF"><p><a href="index.html"><img src="image/6872685c68ce0Ugd.gif" width="76" height="74" alt=""/></a></p>
       <p>乘坐秦始皇回到主页</p></td>
       <td width="33" bgcolor="#16163B" style="color: #FFFFFF">&nbsp;</td>
     </tr>
@@ -156,4 +156,5 @@ a:active {
 </table>
 </body>
 </html>
+
 
